# lildbtool

./: TODO.md  build.sh  package.json
backend/: .env.example  Cargo.toml
backend/bindings/: TableDetailResult.ts  TableResult.ts
backend/src/: main.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  Table.tsx  TableView.tsx  index.css  index.js
postgres/: docker-compose.yml  psql.sh
