[package]
name = "backend"
version = "0.1.0"
authors = ["Davey Struijk <mail@daveystruijk.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.3"
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
dotenv = "0.15.0"
env_logger = "0.8.2"
log = "0.4.14"
sqlx = { version = "0.4.2", features = ["postgres", "offline", "runtime-async-std-native-tls"] }
serde = "1.0.123"
serde_json = "1.0.61"
