[package]
name = "lildbtool-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros", "tracing"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ts-rs = "6.2.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
anyhow = "1.0.71"
dotenvy = "0.15.7"
